--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 		/>
 	</head>
-	<body>
+	<body class="history">
 		<div class="header-top">
 			<div class="container-fluid">
 				<div class="row">
