--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			rel="stylesheet"
 		/>
 	</head>
-	<body onload="changeTableVisibility(0)">
+	<body onload="changeTableVisibility(0)" class="homepage">
 		<div class="header-top">
 			<div class="container-fluid">
 				<div class="row">
