added collapse to mobile view of history page

--- a/history.html
+++ b/history.html
@@ -137,8 +137,21 @@
 				</div>
 				<div class="col-lg-8 col-md-6 col-sm-12">
 					<div class="text-content">
-						<div class="listtitle"><h2>Past Race Results</h2></div>
-						<div class="list-group">
+						<div class="listtitle">
+							<h2>Past Race Results</h2>
+							<!-- this is the collapse button -->
+							<button
+								class="btn expandBtn"
+								type="button"
+								data-toggle="collapse"
+								data-target="#raceResultsCollapse"
+								aria-expanded="false"
+								aria-controls="collapseExample"
+							>
+								<img class="expandBtnImg" src="./images/arrowIcon.png" alt="expand icon">
+							</button>
+						</div>
+						<div class="list-group collapse show" id="raceResultsCollapse">
 							<a href="#" class="list-group-item linkColor"
 								>Race Results for Every Year</a
 							>
@@ -159,8 +172,19 @@
 					<div class="text-content">
 						<div class="listtitle">
 							<h2>Buggies and Buggy Organizations</h2>
+							<!-- collapse button -->
+							<button
+								class="btn expandBtn"
+								type="button"
+								data-toggle="collapse"
+								data-target="#buggyCollapse"
+								aria-expanded="false"
+								aria-controls="collapseExample"
+							>
+								<img class="expandBtnImg" src="./images/arrowIcon.png" alt="expand icon">
+							</button>
 						</div>
-						<div class="list-group">
+						<div class="list-group collapse show" id="buggyCollapse">
 							<a href="#" class="list-group-item linkColor"
 								>Every buggy We have Identified</a
 							>
@@ -185,8 +209,21 @@
 				</div>
 				<div class="col-lg-8 col-md-6 col-sm-12">
 					<div class="text-content">
-						<div class="listtitle"><h2>Media</h2></div>
-						<div class="list-group">
+						<div class="listtitle">
+							<h2>Media</h2>
+							<!-- collapse button -->
+							<button
+								class="btn expandBtn"
+								type="button"
+								data-toggle="collapse"
+								data-target="#mediaCollapse"
+								aria-expanded="false"
+								aria-controls="collapseExample"
+							>
+								<img class="expandBtnImg" src="./images/arrowIcon.png" alt="expand icon">
+							</button>
+						</div>
+						<div class="list-group collapse show" id="mediaCollapse">
 							<a href="#" class="list-group-item linkColor">Past Buggy Books</a>
 							<a href="#" class="list-group-item linkColor"
 								>Videos of previous Racedays</a
@@ -215,8 +252,19 @@
 					<div class="text-content">
 						<div class="listtitle">
 							<h2>Our 100 Years of Buggy Blog Series</h2>
+							<!-- collapse button -->
+							<button
+								class="btn expandBtn"
+								type="button"
+								data-toggle="collapse"
+								data-target="#blogCollapse"
+								aria-expanded="false"
+								aria-controls="collapseExample"
+							>
+								<img class="expandBtnImg" src="./images/arrowIcon.png" alt="expand icon">
+							</button>
 						</div>
-						<div class="list-group">
+						<div class="list-group collapse show" id="blogCollapse">
 							<a href="#" class="list-group-item linkColor">Buggy Blogs</a>
 						</div>
 					</div>
